[package]
name = "ivxv-decproof-verifier"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
sha2 = "0.11.0-rc.2"
rasn = "0.27.2"
tokio = { version = "1.47.1", features = ["full", "net"] }
futures = "0.3.31"
pem = "3.0.5"
p384 = "0.13.1"
