[package]
name = "ivxv-decproof-verifier"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
sha2 = "0.11.0-rc.2"
rasn = "0.28.13"
pem = "3.0.5"
p384 = "0.13.1"
rayon = "1.11.0"
indicatif = "0.18.0"
clap = { version = "4.5.49", features = ["derive"] }
thiserror = "2.0.18"
