[package]
name = "ivxv-decproof-verifier"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "decproof-verify"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22.1"
der = "0.8.1"
rayon = "1.11.0"
indicatif = "0.18.0"
clap = { version = "4.5.49", features = ["derive"] }
thiserror = "2.0.18"
ivxv = "0.0.2"
